ui-tests/ui/src/warn/derive_twice_errors.stderr
error[E0428]: the name `test` is defined multiple times
 --> src/warn/derive_twice_errors.rs:4:10
  |
1 | #[derive(derive::Deprecated)]
  |          ------------------ previous definition of the value `test` here
...
4 | #[derive(derive::Deprecated)]
  |          ^^^^^^^^^^^^^^^^^^ `test` redefined here
  |
  = note: `test` must be defined only once in the value namespace of this module
  = note: this error originates in the derive macro `derive::Deprecated` (in Nightly builds, run with -Z macro-backtrace for more info)
